--- a/Task 2. E-Commerce Website/style.css
+++ b/Task 2. E-Commerce Website/style.css
@@ -774,3 +774,32 @@ footer {
     font-size: 0.8rem !important;
     display: inline-block !important;
 }
+
+.search-bar {
+    display: flex;
+    margin: 0 20px;
+    flex-grow: 1;
+    max-width: 400px;
+}
+
+#searchInput {
+    padding: 10px 15px;
+    border: 1px solid #ddd;
+    border-radius: 5px 0 0 5px;
+    width: 100%;
+}
+
+#searchBtn {
+    padding: 0 15px;
+    background-color: var(--primary-color);
+    color: white;
+    border: none;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+}
+
+#searchBtn:hover {
+    background-color: var(--secondary-color);
+}
+
+
